# thesis-api-gateway

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/routes/: benchmark.py  order.py  user.py
app/clients/grpc/: banchmark_client.py  error_handler.py  order_client.py  user_client.py
app/core/: config.py  database.py  logging.py
app/core/auth/: utils.py
app/core/exceptions/: base.py  openapi.py
app/features/auth/: dependencies.py
app/features/auth/exceptions/: access_token.py  auth.py  refresh_token.py
app/features/auth/models/: refresh_token.py
app/features/auth/routes/: auth.py
app/features/auth/schemas/: token.py
app/features/auth/services/: auth.py
app/features/user/exceptions/: user.py
app/features/user/models/: user.py
app/features/user/routes/: user.py
app/features/user/schemas/: user.py
app/features/user/services/: user.py
app/schemas/: benchmark.py  order.py  user.py
scripts/windows/: generate-stubs.ps1
tests/: test_db.py
tests/api/v1/: test_user.py
